Closed Bug 1299018 Opened 8 years ago Closed 8 years ago

Report late frames as dropped instead of presented

Categories

(Core :: Audio/Video: Playback, defect, P1)

49 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed
firefox50 --- unaffected
firefox51 --- unaffected

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

(Keywords: regression)

Attachments

(1 file)

Per bug 1258870 comment 20, I will work on a safe patch which doesn't change the playback behaviour to uplift to beta (49).
Assignee: nobody → jwwang
Depends on: 1258870
Attachment #8786196 - Flags: review?(kikuo)
Quotes from Chris about uplifting bug 1258870 to beta:

"We can however uplift a fix to beta that will report the late frames as being being dropped instead of actually dropping them. So you'll still get bad A/V sync, but your adaption code will be able to detect that the decode can't keep up and be able to drop back to a lower bitrate, which the user's machine should be able to handle decoding in real time."

So we have this bug for a safe approach.
Target Milestone: --- → mozilla49
Comment on attachment 8786196 [details]
Bug 1299018 - Report late frames as dropped instead of presented.

https://reviewboard.mozilla.org/r/75166/#review73430

Looks fine to me.
Attachment #8786196 - Flags: review?(kikuo) → review+
Thanks!
Comment on attachment 8786196 [details]
Bug 1299018 - Report late frames as dropped instead of presented.

Approval Request Comment
[Feature/regressing bug #]:A safer alternative for bug 1258870 which is not uplifted for being considered medium risk.
[User impact if declined]: Late frames are incorrectly reported as presented instead of dropped which prevents the player from detecting dropped frames and switching to a lower resolution for smoother playback.
[Describe test coverage new/current, TreeHerder]: TreeHerder
[Risks and why]: Low. The change is simple.
[String/UUID change made/needed]: None.
Attachment #8786196 - Flags: approval-mozilla-beta?
We need this patch to mitigate a partner issue.
Keywords: regression
Priority: -- → P1
Comment on attachment 8786196 [details]
Bug 1299018 - Report late frames as dropped instead of presented.

This patch fixes a A/V sync issue. Take it in 49 beta. Should be in 49 beta 9.
Attachment #8786196 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: