Bug 1299018 - Report late frames as dropped instead of presented. r=kikuo, a=gchang

MozReview-Commit-ID: FYHMGqUHjoL